--- a/SQLiteRepositoryDemo/SQLiteRepositoryDemo.UWP/SQLiteRepositoryDemo.UWP.csproj
+++ b/SQLiteRepositoryDemo/SQLiteRepositoryDemo.UWP/SQLiteRepositoryDemo.UWP.csproj
@@ -126,9 +126,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
     <PackageReference Include="SQLiteRepository">
-      <Version>1.2.1-beta</Version>
+      <Version>1.2.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="2.4.0.282" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.168-pre" />
   </ItemGroup>
   <ItemGroup>
